fix: do not collapse toggler and search buttons

--- a/source/css/_pages/_base/_widget/header.styl
+++ b/source/css/_pages/_base/_widget/header.styl
@@ -32,6 +32,17 @@
     border-width 0
     outline 0
 
+  .navbar-nav-tools
+    flex-direction row
+
+    .nav-link i
+      font-size 0.875rem
+
+      @media (max-width: 991.98px)
+        &
+          padding-right 0.5rem
+          padding-left 0.5rem
+
   &.scrolling-navbar
     will-change background, padding
     -webkit-transition background 0.5s ease-in-out, padding 0.5s ease-in-out
